@@ -2,11 +2,11 @@
 Testen
 ----------------------------------------------------------------------
 
+'config dect' zum An- und Abschalten des DECT-Teils der 7270 ff.
+
 ----------------------------------------------------------------------
 Wichtig
 ----------------------------------------------------------------------
-
-config forward 6 toggle
 
 ----------------------------------------------------------------------
 Demnächst anschauen
